# winzig

./: .clang-format  CMakeLists.txt  LICENSE  README.md  config.h  hw_config.c  winzig.cpp
pcb/: fp-info-cache  pcb.kicad_pcb  pcb.kicad_prl  pcb.kicad_pro  pcb.kicad_sch
src/: api.cpp  api.h  winzig.cpp
src/api/: api.cpp  api.h
src/sd/: sd.cpp  sd.h
